// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function failure Should return well-formed response when message explicitly specified 1`] = `
Object {
  "error": Object {
    "code": 400,
    "message": "Boo!",
  },
}
`;

exports[`Function failure Should return well-formed response with a default status text when message unspecified 1`] = `
Object {
  "error": Object {
    "code": 400,
    "message": "Bad Request",
  },
}
`;

exports[`Function success Should return well-formed response when message explicitly specified 1`] = `
Object {
  "status": Object {
    "code": 200,
    "message": "Hooray!",
  },
}
`;

exports[`Function success Should return well-formed response with a default status text when message unspecified 1`] = `
Object {
  "status": Object {
    "code": 200,
    "message": "OK",
  },
}
`;
